# Wchat

./: idea  task
Wchat_client/client_config/communication_protocol/: sign_up.json
Wchat_client/include/: fragment_operate.h
Wchat_client/test/: CMakeLists.txt
Wchat_client_SDK/: CMakeLists.txt  client.sh
Wchat_client_SDK/doc/: client_structure.txt
Wchat_client_SDK/include/: msg_util.h
Wchat_client_SDK/src/: CMakeLists.txt  msg_util.cc
Wchat_server/: CMakeLists.txt  server.sh  task
Wchat_server/doc/: client_server_protocol.txt
Wchat_server/doc/chat/: chat服务器.md
Wchat_server/include/: account_manager.h  connect_manager.h  fragment_operate.h  group_manager.h  msg_buffer.h  msg_fragment.h  msg_handler.h  msg_transmission.h  msg_type.h  queue.h  send_fragment.h  server_json.h  server_log.h  server_signal.h  server_task.h  sqlite_wrapper.h  thread_pool.h  user_manager.h
Wchat_server/network/: basic_head.h  buffer.cc  buffer.h  data_center.cc  data_center.h  error.h  event_handler.h  handle_message.h  inner_msg_object.cc  inner_msg_object.h  message.h  msg_parse.cc  msg_parse.h  reactor.cc  reactor.h  server.h  server_define.h  thread.cc  thread.h
Wchat_server/server_config/: account.json
Wchat_server/server_config/tmp_user_info/: group_member  user_friend
Wchat_server/src/: .server_json.cc.swp  CMakeLists.txt  account_manager.cc  connect_manager.cc  group_manager.cc  msg_buffer.cc  msg_handler.cc  msg_transmission.cc  queue.cc  send_fragment.cc  server_json.cc  server_log.cc  server_signal.cc  server_task.cc  sqlite_wrapper.cc  thread_pool.cc  user_manager.cc
Wchat_server/test/: CMakeLists.txt  client_test.cc  msg_buffer_test.cc  msg_handle_test.cc  msg_transmission_test.cc  print_database.cc  server_test.cc  sqlite3_test.cc  user_group_manager_test.cc  wchat_server.cc
