project(server_test)

set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)

set(SERVER_LOG server_log.cc)
set(SERVER_JSON server_json.cc)
set(SQLITE_WRAPPER sqlite_wrapper.cc)
set(ACCOUNT_MANAGER account_manager.cc)
set(USER_MANAGER user_manager.cc)
set(GROUP_MANAGER group_manager.cc)
set(QUEUE queue.cc)
set(MSG_BUFFER msg_buffer.cc)
set(MSG_HANDLER msg_handler.cc)
set(SERVER_TASK server_task.cc)
set(SERVER_SIGNAL server_signal.cc)
set(MSG_TRANSMISSION msg_transmission.cc)
set(CONNECT_MANAGER connect_manager.cc)
set(THREAD_POOL thread_pool.cc)

add_library(serverlog SHARED ${SERVER_LOG})
add_library(serverjson SHARED ${SERVER_JSON})
add_library(sqlitewrapper SHARED ${SQLITE_WRAPPER})
add_library(account_manager SHARED ${ACCOUNT_MANAGER})
add_library(user_manager SHARED ${USER_MANAGER})
add_library(group_manager SHARED ${GROUP_MANAGER})
add_library(queue SHARED ${QUEUE})
add_library(msg_buffer SHARED ${MSG_BUFFER})
add_library(msg_handler SHARED ${MSG_HANDLER})
add_library(server_task SHARED ${SERVER_TASK})
add_library(server_signal SHARED ${SERVER_SIGNAL})
add_library(msg_transmission SHARED ${MSG_TRANSMISSION})
add_library(connect_manager SHARED ${CONNECT_MANAGER})
add_library(thread_pool SHARED ${THREAD_POOL})

target_link_libraries(serverlog log4cxx)
target_link_libraries(sqlitewrapper sqlite3 log4cxx)
target_link_libraries(account_manager log4cxx)
target_link_libraries(user_manager log4cxx sqlite3)
target_link_libraries(group_manager log4cxx sqlite3)
target_link_libraries(msg_handler log4cxx sqlite3)
target_link_libraries(server_task log4cxx sqlite3)
target_link_libraries(server_signal)
target_link_libraries(msg_transmission log4cxx sqlite3 event)
target_link_libraries(connect_manager log4cxx event)
target_link_libraries(thread_pool log4cxx pthread)